temp/nginx/nginx-ns-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-lb
