temp/nginx/coffee-rc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nginx-lb
  name: coffee-svc-<lb_num>
  labels:
    app: coffee
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: coffee
    instance: coffee-<lb_num>
