temp/nginx/nginx-plus-ingress-rc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nginx-lb
  name: mylb-<lb_num>
  labels:
    app: nginx-plus-ingress
spec:
  clusterIP: None
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: nginx-plus-ingress
    instance: nginx-plus-ingress-<lb_num>
